# Pro-set

./: 2-增加修改到本地 - 副本.bat  2-增加修改到本地.bat  3-推送到github.bat  README.md  拉取最新.bat
Git_pro/: 流程.txt
JS_pro/MGKJ_v16/: help.txt  manifest.json  popup.html  service-worker.js
JS_pro/MGKJ_v16/CSS/: 0.css
JS_pro/MGKJ_v16/html/: 0.html  myshopify_shop6888_peizhi.html
JS_pro/案例/: 备注.txt
Py_pro/Py for vue/: 2-增加 vue 功能页面.py  3-增加-子组件.py  4-快速移动项目到本地git仓库.py  5-快速给书签接口 填充数据.py  6-随机生成网址.py
Py_pro/tool_rsgz/: __init__.py  main.py  备注  添加PYTHONPATH.bat
Py_pro/youmi_pro/: 000-备注.txt  001-导入任务.py  002-换绑域名-随机底部政策-备注.py  003-查询类目.py  004.1-调整价格辅助.py  004.2-修改价格-批量.py  005-导入顶部菜单.py  006-获取商品图.py  007.1-加后缀辅助函数.py  007.2-标题加后缀.py  008-图片尺寸分类.py  009-打印子目录图片数量.py  010.1-下载几个类目产品 比较相同尺寸.py  010.2-清除800-800之外的所有尺寸.py  011-开启everything.py  011.1-开启everything 辅助函数.py  012-关闭everything.py  013-修改标题 填表.py  014-分类.py  015.1-删除侵权产品.py  015.2-异步删除侵权产品.py  016-set添加域名.py  017-查看订单.py  018-谷歌自定义搜索-爬取域名.py  018.2-爬域名-通义.py  019-域名非交集.py  020-获取所有网站信息.py  021-获取网站json数据-替换.py  022-清除日志.py  23.1-失效域名替换-先提取数据.py  23.3-域名替换.py  24-weketu.py  25-总库存.py  26-总库存+weketu.py  27-判断文件是否存在.py  28-检查旧网站.py  29-检查旧网站-异步方式.py  30-补充产品数量.py  31-点击.py  32-post.py  (+13 more)
Vue_pro/: 备注.txt
Vue_pro/1.1-vue+组合式api(函数式)+setup语法糖+js/3.8-书签库 v8 vue+rust get请求 内存数组模拟数据库 成功/rust_pro/: Cargo.toml
Vue_pro/1.1-vue+组合式api(函数式)+setup语法糖+js/3.8-书签库 v8 vue+rust get请求 内存数组模拟数据库 成功/rust_pro/src/: main.rs
Vue_pro/5-vue+HTML 文件+js/: help.txt
Vue_pro/database-manager/: package.json  备注-database-manager.txt  备注.txt
(+271 files in other folders)
