[package]
name = "rust_pro"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }  # 用于序列化和反序列化
serde_json = "1.0"  # 用于处理 JSON 数据
uuid = { version = "1.0", features = ["v4"] }  # 用于生成唯一 ID

# 后面用于连接 本地数据库
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"  # 用于加载环境变量
actix-cors = "0.7.1" # 支持跨域